bid tile overflow fix

--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -1071,8 +1071,10 @@ form.post-a-job
   margin: 0 10px 20px 10px
   width: 600px
   -webkit-box-shadow: 1px 1px 5px rgba(0,0,0,.5)
+  .left
+    width: 75%
   .right
-    width: 220px
+    width: 24%
   .stripe
     background: #607965 !important
     h3
